перевел на типы